k8s/helm/minio-default-helm.yaml
---
# Source: tenant/templates/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default
spec:
  ingressClassName: cilium
  rules:
    - host: minio.walnuts.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  name: http-minio
    - host: "*.minio.walnuts.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  name: http-minio
---
# Source: tenant/templates/console-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-console
spec:
  ingressClassName: cilium
  rules:
    - host: minio-console.walnuts.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: default-console
                port:
                  name: http-console
---
# Source: tenant/templates/checks.yaml
# If an existing secret is used, do not set access-key and secret-key explicitly
# (note that we allow the default settings in values.yaml)

# If configuration.name is set and not the same as configSecret.name,
# then we should raise an error and abort
